# study_pybind11

./: LICENSE  README.md
Study_pybind11/: CMakeLists.txt
Study_pybind11/PyEncDec/: CMakeLists.txt
Study_pybind11/PyEncDec/com/: com.h
Study_pybind11/PyEncDec/main/: main.cpp
Study_pybind11/PyEncDec/src/: main.cpp
Study_pybind11/Test/res/: setup.py  test.sh
Study_pybind11/cmake/: ENV.cmake
Study_pybind11/core/: CMakeLists.txt
Study_pybind11/core/src/: ArgsParser.h  ByteBufferIO.h  CacheManager.cpp  CacheManager.h  CmdBuilder2.cpp  CmdBuilder2.h  ConcurrentWorker.h  ConfigUtils.cpp  ConfigUtils.h  CountDownLatch.h  DynamicLibrary.h  EDManager.cpp  EDManager.h  ExeInfo.h  FileIO.h  FileUtils.cpp  FileUtils.h  FixedMap.h  IConfigResolver.h  IKeyValue.h  PerformanceHelper.h  Prop.cpp  Prop.h  Properties.hpp  RTConfig.h  Random.h  SaveQueue.h  StringBuffer.h  ThreadPool.h  Value.hpp  _MkdirUtils.h  _time.h  absl_debug.h  base64.h  c_common.h  callgrind_helper.h  collections.h  common.h  console_cursor.h  edm_c_api.cpp  (+12 more)
Study_pybind11/gzip/: CMakeLists.txt
Study_pybind11/gzip/main/: main.cpp  test_Gzip.cpp  test_read_cxqc.cpp
Study_pybind11/gzip/src/: Gzip.cpp  Gzip.h  ZlibUtils.cpp  ZlibUtils.h  decode_mem.h
Study_pybind11/gzip/zlib-1.3.1/: CMakeLists.txt
Study_pybind11/http_service/: CMakeLists.txt
Study_pybind11/http_service/src/: HttpImpl.cpp  IHttp.cpp  IHttp.h  main.cpp  ocr_json.cpp  ocr_json.h
Study_pybind11/infer/: CMakeLists.txt
Study_pybind11/infer/main/: main.cpp
Study_pybind11/infer/mainWrap/: main.cpp
Study_pybind11/infer/src/: EDMHelper.h  fd_ocr.cpp  fd_ocr.h  fd_picodet.cpp  fd_picodet.h  ocr_common.h  ocr_config.h  ocr_context.h  string_utils.hpp  utils.cpp  utils.h
Study_pybind11/infer/src_rapid/: fd_ocr_impl.cpp
Study_pybind11/infer/test_rapid/: main.cpp
Study_pybind11/json/: med_json.h
Study_pybind11/pybind/: CMakeLists.txt
Study_pybind11/pybind/src/: binds.h  fd_types.h  main.cc  main.h  pyutils.h  runtime.cc  utils.cc
Study_pybind11/snappy/: .gitmodules  CMakeLists.txt  build.sh
